--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "app3": "cd apps/app3  && npm run dev",
+    "build-app3": "cd apps/app3  && npm run  build"
   },
   "dependencies": {
     "core-js": "^3.6.5",
