--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "importor",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "output/index.js",
   "scripts": {
     "main": "vue-cli-service serve",
@@ -10,12 +10,16 @@
     "build": "npx rollup -c rollup.config.js"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.15.8",
+    "axios": "^0.21.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "axios": "^0.21.1"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.8",
+    "@rollup/plugin-alias": "^2.2.0",
+    "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.0.6",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -24,8 +28,6 @@
     "@vue/cli-service": "~4.5.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "rollup": "^2.58.0",
-    "rollup-plugin-alias": "^2.2.0",
-    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
